--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 2025-03-27
+  Fixes:
+    - Seeds/Mash recycling no longer returns fruits
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025-03-16
   Features:
