swapped args to fix midgame recipe unlock

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 2025-04-19
+  Fixes:
+    - Enabled midgame recipe unlock by fixing parameter order
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2025-03-27
   Fixes:
